fix(UI): various fixes and improvements
